single-vpc-with-RDS-connected-linux-instance/vpc.tf
# Internet VPC
resource "aws_vpc" "terraform" {
    cidr_block = "10.0.0.0/16"
    instance_tenancy = "default"
    enable_dns_support = "true"
    enable_dns_hostnames = "true"
    enable_classiclink = "false"
    tags {
        Name = "${var.VPC_NAME}-VPC"
    }
}


# Subnets
resource "aws_subnet" "terraform-public-1" {
    vpc_id = "${aws_vpc.terraform.id}"
    cidr_block = "10.0.1.0/24"
    map_public_ip_on_launch = "true"
    availability_zone = "us-east-1a"

    tags {
        Name = "${var.VPC_NAME}-public-1"
    }
}
resource "aws_subnet" "terraform-public-2" {
    vpc_id = "${aws_vpc.terraform.id}"
    cidr_block = "10.0.2.0/24"
    map_public_ip_on_launch = "true"
    availability_zone = "us-east-1b"

    tags {
        Name = "${var.VPC_NAME}-public-2"
    }
}
resource "aws_subnet" "terraform-public-3" {
    vpc_id = "${aws_vpc.terraform.id}"
    cidr_block = "10.0.3.0/24"
    map_public_ip_on_launch = "true"
    availability_zone = "us-east-1c"

    tags {
        Name = "${var.VPC_NAME}-public-3"
    }
}
resource "aws_subnet" "terraform-public-4" {
    vpc_id = "${aws_vpc.terraform.id}"
    cidr_block = "10.0.4.0/24"
    map_public_ip_on_launch = "true"
    availability_zone = "us-east-1d"

    tags {
        Name = "${var.VPC_NAME}-public-4"
    }
}
resource "aws_subnet" "terraform-public-5" {
    vpc_id = "${aws_vpc.terraform.id}"
    cidr_block = "10.0.5.0/24"
    map_public_ip_on_launch = "true"
    availability_zone = "us-east-1e"

    tags {
        Name = "${var.VPC_NAME}-public-5"
    }
}
resource "aws_subnet" "terraform-private-1" {
    vpc_id = "${aws_vpc.terraform.id}"
    cidr_block = "10.0.6.0/24"
    map_public_ip_on_launch = "false"
    availability_zone = "us-east-1a"

    tags {
        Name = "${var.VPC_NAME}-private-1"
    }
}
resource "aws_subnet" "terraform-private-2" {
    vpc_id = "${aws_vpc.terraform.id}"
    cidr_block = "10.0.7.0/24"
    map_public_ip_on_launch = "false"
    availability_zone = "us-east-1b"

    tags {
        Name = "${var.VPC_NAME}-private-2"
    }
}
resource "aws_subnet" "terraform-private-3" {
    vpc_id = "${aws_vpc.terraform.id}"
    cidr_block = "10.0.8.0/24"
    map_public_ip_on_launch = "false"
    availability_zone = "us-east-1c"

    tags {
        Name = "${var.VPC_NAME}-private-3"
    }
}
resource "aws_subnet" "terraform-private-4" {
    vpc_id = "${aws_vpc.terraform.id}"
    cidr_block = "10.0.9.0/24"
    map_public_ip_on_launch = "false"
    availability_zone = "us-east-1d"

    tags {
        Name = "${var.VPC_NAME}-private-4"
    }
}
resource "aws_subnet" "terraform-private-5" {
    vpc_id = "${aws_vpc.terraform.id}"
    cidr_block = "10.0.10.0/24"
    map_public_ip_on_launch = "false"
    availability_zone = "us-east-1e"

    tags {
        Name = "${var.VPC_NAME}-private-5"
    }
}

# Internet GW
resource "aws_internet_gateway" "main-gw" {
    vpc_id = "${aws_vpc.terraform.id}"

    tags {
        Name = "${var.VPC_NAME}-gw"
    }
}

# route tables
resource "aws_route_table" "terraform-public" {
    vpc_id = "${aws_vpc.terraform.id}"
    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = "${aws_internet_gateway.main-gw.id}"
    }

    tags {
        Name = "${var.VPC_NAME}-public-1"
    }
}

# route associations public
resource "aws_route_table_association" "terraform-public-1-a" {
    subnet_id = "${aws_subnet.terraform-public-1.id}"
    route_table_id = "${aws_route_table.terraform-public.id}"

}
resource "aws_route_table_association" "terraform-public-2-a" {
    subnet_id = "${aws_subnet.terraform-public-2.id}"
    route_table_id = "${aws_route_table.terraform-public.id}"
}
resource "aws_route_table_association" "terraform-public-3-a" {
    subnet_id = "${aws_subnet.terraform-public-3.id}"
    route_table_id = "${aws_route_table.terraform-public.id}"
}
resource "aws_route_table_association" "terraform-public-4-a" {
    subnet_id = "${aws_subnet.terraform-public-4.id}"
    route_table_id = "${aws_route_table.terraform-public.id}"
}
resource "aws_route_table_association" "terraform-public-5-a" {
    subnet_id = "${aws_subnet.terraform-public-5.id}"
    route_table_id = "${aws_route_table.terraform-public.id}"
}
